Fix: images with a blendmode need a white bg on mobile

--- a/src/components/blocks/livestream-links/livestream-links.scss
+++ b/src/components/blocks/livestream-links/livestream-links.scss
@@ -32,7 +32,7 @@
   text-decoration: none;
 
   &__img {
-    background-color: transparent;
+    background-color: white;
     height: 0;
     overflow: hidden;
     padding-bottom: 56.25%;
